Started some refactoring, added more variables to product context, created reusable hook with productListContext. On backend, changed product controller to take category as path variable, deleted method that return all product in the category and changed product by fillter repository to be usuable when no fillters are passed.